syntax = "proto3";
package tron_messages;

import "tron/block_message.proto";
import "evm/parsed_abi_block_message.proto";

message ParsedAbiTransaction {
  tron_messages.TransactionHeader TransactionHeader = 1;
  tron_messages.Receipt Receipt = 2;
  // TransactionFee TransactionFee = 3;
  evm_messages.ParsedAbiTransactionStatus TransactionStatus = 4;
  repeated evm_messages.ParsedAbiCall Calls = 5;
  uint64 Time = 6;
}

message ParsedAbiBlockMessage {
  // Chain Chain = 1;
  tron_messages.BlockHeader Header = 2;
  // MinerReward Reward = 4;
  repeated ParsedAbiTransaction Transactions = 6;
  // optional BlockHeader L1Header = 7;
}
