syntax = "proto3";
package tron_messages;

import "tron/block_message.proto";
import "evm/token_block_message.proto";

message TokenBlockMessage {
  tron_messages.Chain Chain = 1;
  tron_messages.BlockHeader Header = 2;
  repeated evm_messages.TokenTransfer Transfers = 3;
  tron_messages.RewardWithdraw RewardWithdraw = 4;
}
